--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
         "concurrently": "6.3.0",
         "postcss": "8.4.21",
         "prettier": "2.8.6",
-        "pug": "3.0.2",
+        "pug": "^3.0.2",
+        "pug-cli": "^1.0.0-alpha6",
         "sass": "1.60.0",
         "shelljs": "0.8.5",
         "upath": "2.0.1"
